--- a/Proyecto1/styles.css
+++ b/Proyecto1/styles.css
@@ -140,8 +140,8 @@ main{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-content: center;
-    gap:20px
+    align-items: center;
+    gap:20px;
 }
 
 .SeccionTitle{
