--- a/Projecto2/styles.css
+++ b/Projecto2/styles.css
@@ -5,3 +5,53 @@ body{
     background-position:center;
     background-repeat:repeat;
 }
+p{
+    font-family: 'Grandstander';
+}
+
+h2{
+    font-family: 'Grandstander';
+}
+
+label{
+    font-family: 'Grandstander';
+}
+
+#gameName{
+    background-color: #E2C258;      /* amarillo del ejemplo */
+    padding: 20px 40px;             /* espacio interno */
+    border-radius: 20px;            /* esquinas redondeadas */
+    display: inline-block;          /* el fondo solo rodea el texto */
+    box-shadow: 0 4px 10px rgba(0,0,0,0.25);  /* sombra suave */
+    margin: 20px auto;
+    display: flex; justify-self: center;
+}
+
+#inputSection{
+    justify-self: center;
+    align-items: center;
+
+}
+
+#inputItems{
+    margin: 100px;
+    background-color:#ec52c5 ;
+    border-radius: 20px;
+    padding: 20px;
+}
+
+.inputItem{
+    display: flex;
+    flex-direction: row;
+    justify-self: center;
+    align-items: center;
+    gap: 20px;
+    
+}
+
+input{
+    border-radius: 10px;
+    border:1px transparent solid;
+    padding: 5px;
+    font-size: medium;
+}
